fix scrollbar jumping

--- a/trydotnetandjavaandpython/src/styles.scss
+++ b/trydotnetandjavaandpython/src/styles.scss
@@ -5,6 +5,7 @@
 html,
 body {
     height: 100%;
+    overflow-y: scroll;
 }
 body {
     margin: 0;
@@ -21,11 +22,13 @@ body {
     box-shadow: inset 0 0 5px grey;
     border-radius: 5px;
 }
-
+::-webkit-scrollbar-corner {
+    background: rgba(0,0,0,0);
+  }
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: rgb(32, 1, 54);
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 /* Handle on hover */
